--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=localdemo
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg, Correlation ID: %X{correlationId}%n
+logging.pattern.correlation=[${spring.application.name:},%X{traceId:-},%X{spanId:-}] 
+logging.include-application-name=false
